# tiago_robot_simulation_ros_jazzy

./: .gitignore  .gitmodules  README.md  frames_2026-04-11_21.35.26.gv  your_robot.sdf  your_robot.urdf
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: arm_reach_action_server.py  arm_reach_bt_node.py  test_arm_reach.py  tiago_kdl_ik.py  tiago_tf_utils.py
src/arm_controller/config/: tiago_arm_config.yaml
src/arm_controller/launch/: arm_reach.launch.py
src/arm_controller_msgs/: CMakeLists.txt  package.xml
src/arm_controller_msgs/action/: ArmReach.action
src/navigation_/: CMakeLists.txt  package.xml
src/navigation_/config/: nav2_params.yaml
src/navigation_/launch/: navigation_launch.py
src/tiago_controller/: package.xml  setup.cfg  setup.py
src/tiago_controller/config/: tiago_reach_config.yaml
src/tiago_controller/launch/: reach_target.launch.py
src/tiago_controller/tiago_controller/: navigation_helper.py  reach_target_action_server.py  test_reach_target.py
src/tiago_controller_msgs/: CMakeLists.txt  package.xml
src/tiago_controller_msgs/action/: ReachTarget.action
src/tiago_robot_simulation/: CMakeLists.txt  package.xml
src/tiago_robot_simulation/config/: cartographer.lua  controllers.yaml
src/tiago_robot_simulation/launch/: gazebo_simulation.launch.py  robot_state_publisher.launch.py
src/tiago_robot_simulation/robots/: tiago.urdf.xacro
src/tiago_robot_simulation/ros2_control/: ros2_control.urdf.xacro
src/tiago_robot_simulation/scripts/: resolve_urdf.py
src/tiago_robot_simulation/urdf/arm/: arm.ros2_control.xacro  arm.urdf.xacro  wrist.ros2_control.xacro  wrist.urdf.xacro
src/tiago_robot_simulation/urdf/head/: head.ros2_control.xacro  head.urdf.xacro
src/tiago_robot_simulation/urdf/torso/: torso.ros2_control.xacro  torso.urdf.xacro
src/tiago_robot_simulation/worlds/: test.sdf  test.world
src/torso_controller/: package.xml  setup.cfg  setup.py
src/torso_controller/config/: tiago_torso_config.yaml
src/torso_controller/launch/: torso_adjust.launch.py
src/torso_controller/torso_controller/: test_torso_adjust.py  torso_adjust_action_server.py  torso_height_calculator.py
src/torso_controller_msgs/: CMakeLists.txt  package.xml
src/torso_controller_msgs/action/: TorsoAdjust.action
